# rockpaperscissors_bot

./: .env.example  README.md  bot.py  pyproject.toml
config_data/: config.py
handlers/: other_handlers.py  user_handlers.py
keyboards/: keyboards.py
lexicon/: lexicon_ru.py
services/: services.py
