[tool.poetry]
name = "rock-paper-scissors"
version = "0.1.0"
description = ""
authors = ["kachus <ka4usova.e@gmail.com>"]
readme = "README.md"
packages = [{include = "rock_paper_scissors"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
